# ayab-firmware

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  Makefile  README  README.md  Solenoids.cpp  Solenoids.h  arduino.mk  ayab.ino  ayab_hw_test.ino  ayab_hw_test.inox  beeper.cpp  beeper.h  build.sh  carriage_hallvalues.md  crc  debug.h  encoders.cpp  encoders.h  fix-build-name.py  hallsensor.cpp  hallsensor.h  hw_test.cpp  hw_test.h  init  kg-88_hallvalues.md  knitter.cpp  knitter.h  platformio.ini  serial_encoding.cpp  serial_encoding.h  (+5 more)
.github/workflows/: archive_build.yml  build.yml  build_firmware.yml  create_release.yml  run_tests.yml  sonar.yml  sonar_scan.yml  test.yml
ayab_hw_test/: ayab_hw_test.ino
boards/: ayab-esp32.json
doc/: finite_state_machine.md
docs/: _adafruit___m_c_p23008_8h_source.html  _arduino_8h.html  _arduino_8h.js  _arduino_8h__dep__incl.map  _arduino_8h__dep__incl.md5  _arduino_8h__incl.map  _arduino_8h__incl.md5  _arduino_8h_source.html  _c_o_b_s_8h_source.html  _packet_serial_8h_source.html  _s_l_i_p_8h_source.html  _wire_8h.html  _wire_8h__dep__incl.map  _wire_8h__dep__incl.md5  _wire_8h__incl.map  _wire_8h__incl.md5  _wire_8h_source.html  annotated.html  annotated_dup.js  beeper_8cpp.html  beeper_8cpp__incl.map  beeper_8cpp__incl.md5  beeper_8h.html  beeper_8h.js  beeper_8h__dep__incl.map  beeper_8h__dep__incl.md5  beeper_8h__incl.map  beeper_8h__incl.md5  beeper_8h_source.html  beeper__mock_8cpp.html  beeper__mock_8cpp.js  beeper__mock_8cpp__incl.map  beeper__mock_8cpp__incl.md5  beeper__mock_8h.html  beeper__mock_8h.js  beeper__mock_8h__dep__incl.map  beeper__mock_8h__dep__incl.md5  beeper__mock_8h__incl.map  beeper__mock_8h__incl.md5  beeper__mock_8h_source.html  (+689 more)
html/: _adafruit___m_c_p23008_8h_source.html  _arduino_8h.html  _arduino_8h__dep__incl.map  _arduino_8h__dep__incl.md5  _arduino_8h__incl.md5  _arduino_8h_source.html  _c_o_b_s_8h_source.html  _packet_serial_8h_source.html  _s_l_i_p_8h_source.html  _wire_8h.html  _wire_8h__dep__incl.map  _wire_8h__dep__incl.md5  _wire_8h__incl.map  _wire_8h__incl.md5  _wire_8h_source.html  annotated.html  annotated_dup.js  beeper_8cpp.html  beeper_8h.html  beeper_8h__dep__incl.map  beeper_8h__incl.map  beeper_8h__incl.md5  beeper_8h_source.html  beeper__mock_8cpp.html  beeper__mock_8cpp__incl.map  beeper__mock_8h.html  beeper__mock_8h.js  beeper__mock_8h__dep__incl.md5  beeper__mock_8h_source.html  board_8h.html  board_8h__dep__incl.map  board_8h_source.html  class_adafruit___m_c_p23008-members.html  class_adafruit___m_c_p23008.html  class_beeper-members.html  class_beeper.html  class_beeper__inherit__graph.map  class_beeper__inherit__graph.md5  class_beeper_a06ebbe1d989353b0c3f674fe5506efac_cgraph.map  class_beeper_a4c58e02ea235cbf87cc32acc437b1246_icgraph.md5  (+405 more)
lib/api/: api.cpp  api.h
lib/components/beeper/: beeper.cpp  beeper.h
lib/components/belt/: belt.cpp  belt.h
lib/components/carriage/: carriage.cpp  carriage.h
lib/components/encoder/: encoder.cpp  encoder.h
lib/components/hallsensor/: hallsensor.cpp  hallsensor.h
lib/components/knitter/: knitter.cpp  knitter.h  line.cpp  line.h
lib/components/led/: led.cpp  led.h
lib/components/machine/: machine.cpp  machine.h
lib/crc8/: crc8.cpp  crc8.h
lib/devices/mcp23008/: mcp23008.h  (+1 more)
lib/hal/: hal.h
lib/platform/: platform.cpp  platform.h
libraries/Adafruit-MCP23008-library/: Adafruit_MCP23008.cpp  Adafruit_MCP23008.h
libraries/Alt_MCP23008/: Alt_MCP23008.cpp  Alt_MCP23008.h
libraries/SerialCommand/: SerialCommand.h
python/: ayab_cli.py  ayab_communication.py  crc8.py
scripts/: preBuild.py
src/: avr_mcu_section.c  main.cpp
src/ayab/: Makefile  analogReadAsyncWrapper.cpp  analogReadAsyncWrapper.h  beeper.cpp  beeper.h  board.h  com.cpp  com.h  controller.cpp  controller.h  debug.h  encoders.cpp  encoders.h  error.cpp  error.h  fsm.cpp  fsm.h  globalBeeper.cpp  globalCom.cpp  globalEncoders.cpp  global_Fsm.cpp  global_OpError.cpp  global_OpIdle.cpp  global_OpInit.cpp  global_OpKnit.cpp  global_OpReady.cpp  global_OpTest.cpp  global_Solenoids.cpp  global_analogReadAsyncWrapper.cpp  global_beeper.cpp  global_com.cpp  global_controller.cpp  global_encoders.cpp  global_error.cpp  global_fsm.cpp  global_hw_test.cpp  global_hw_test.h  global_init.cpp  global_knit.cpp  global_knitter.cpp  (+47 more)
test/: CMakeLists.txt  README.md  test.sh  test_Fsm.cpp  test_OpError.cpp  test_OpIdle.cpp  test_OpInit.cpp  test_OpKnit.cpp  test_OpReady.cpp  test_OpTest.cpp  test_Solenoids.cpp  test_all.cpp  test_beeper.cpp  test_boards.cpp  test_com.cpp  test_controller.cpp  test_e2e.cpp  test_encoders.cpp  test_fsm.cpp  test_hw_test.cpp  test_knit.cpp  test_knitter.cpp  test_knitting_machine.cpp  test_machine.cpp  test_main.cpp  test_op.cpp  test_serial_encoding.cpp  test_solenoids.cpp  test_test.cpp  test_tester.cpp  testencoders.cpp  testfsm.cpp
test/arduino_mock/: CMakeLists.txt
test/lib/test_led/: main.cpp
test/mocks/: Arduino.h  SerialCommand_mock.cpp  SerialCommand_mock.h  Wire.h  analogReadAsync.h  analogReadAsyncWrapper_mock.cpp  analogReadAsyncWrapper_mock.h  beeper_mock.cpp  beeper_mock.h  com_mock.cpp  com_mock.h  controller_mock.cpp  controller_mock.h  encoders_mock.cpp  encoders_mock.h  fsm_mock.cpp  fsm_mock.h  hal_mock.h  hw_test_mock.cpp  hw_test_mock.h  io_expanders_mock.cpp  io_expanders_mock.h  knit_mock.cpp  knit_mock.h  knitter_mock.cpp  knitter_mock.h  knitting_machine.cpp  knitting_machine.h  knitting_machine_adapter.cpp  knitting_machine_adapter.h  machine_mock.h  opError_mock.cpp  opError_mock.h  opIdle_mock.cpp  opIdle_mock.h  opInit_mock.cpp  opInit_mock.h  opKnit_mock.cpp  opKnit_mock.h  opReady_mock.cpp  (+15 more)
test/mocks/knitter/: beeper_mock.cpp  beeper_mock.h  encoders_mock.cpp  encoders_mock.h  serial_encoding_mock.cpp  serial_encoding_mock.h  solenoids_mock.cpp  solenoids_mock.h  types.h
test/mocks/serial_encoding/: knitter_mock.cpp  knitter_mock.h
test/mocks/util/: AtomicBlock.h  atomic.h  delay.h
(+30 files in other folders)
